// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`All Contributors Plugin beforeShipit should comment confirming extra contributions 1`] = `
"# Extra Contributions

The following contributions will be added to all-contributors (as well as any code contributions) when this PR is released :tada::

- @andrew - design, doc"
`;

exports[`All Contributors Plugin beforeShipit should warn about unknown contribution types - no valid 1`] = `
"# Extra Contributions

No valid contribution types found!

## Unknown Contribution Types

We found some unknown contribution types in your PR body!
These contributions will not be counted and you should fix them.

- \`design123\`,- \`doc456\`"
`;

exports[`All Contributors Plugin beforeShipit should warn about unknown contribution types - some valid 1`] = `
"# Extra Contributions

The following contributions will be added to all-contributors (as well as any code contributions) when this PR is released :tada::

- @adam - doc

## Unknown Contribution Types

We found some unknown contribution types in your PR body!
These contributions will not be counted and you should fix them.

- \`design123\`,- \`doc456\`"
`;

exports[`All Contributors Plugin beforeShipit should warn about unknown contribution types 1`] = `
"# Extra Contributions

The following contributions will be added to all-contributors (as well as any code contributions) when this PR is released :tada::

- @andrew - doc

## Unknown Contribution Types

We found some unknown contribution types in your PR body!
These contributions will not be counted and you should fix them.

- \`design123\`"
`;
